# copper2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  timer.hh
src/: core.ccm  image.ccm  math.ccm  rasterize.ccm  util.ccm
